<resources>
    <string name="app_name">Barber´sGold</string>
    <string name="pass">**********</string>
    <string name="iniciar_secci_n">Iniciar Sección</string>
    <string name="iniciar_sección">iniciar sección</string>
    <string name="login">Iniciar Sección</string>
    <string name="todo">TODO</string>
    <string name="exemplo">exemplo@exemplo.com</string>
    <string name="registrate">Registrate</string>
    <string name="olvido_su_nombre_de_usuario_o_cotrase_a">¿Olvido su usuario o contraseña?</string>
    <string name="contrase_a">Contraseña</string>
    <string name="email">Email</string>
    <string name="nombre">Nombre</string>
    <string name="apellidos">Apellidos</string>
    <string name="cedula">Cedula</string>
    <string name="contrasena">Contraseña</string>
    <string name="direcci_n">Dirección</string>
    <string name="telefono">Teléfono</string>
    <string name="registrarse">registrarse</string>
    <string name="registro">Registro</string>
    <string name="ingresa_los_siguientes_datos">Ingresa los siguientes datos</string>
    <string name="correo">Correo</string>
    <string name="ya_tienes_con_una_cuenta">¿Ya tienes con una cuenta?</string>
    <string name="iniciar_seccion">iniciar sección</string>
    <string name="recordar">Recordar</string>
    <string name="button">Button</string>
    <string name="menu_logout">menu_logout</string>
    <string name="menu_forget_logout">menu_forget_logout</string>
</resources>