<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.MainActivity2">


    <TextView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:fontFamily="sans-serif"
        android:gravity="center|fill_horizontal"
        android:letterSpacing="-0.02"
        android:lineSpacingExtra="3sp"
        android:text="@string/registro"
        android:textColor="#000000"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/guideline27"
        app:layout_constraintEnd_toStartOf="@+id/guideline25"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/guideline9"
        app:layout_constraintTop_toTopOf="@+id/guideline26"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:fontFamily="sans-serif"
        android:letterSpacing="-0.02"
        android:lineSpacingExtra="3sp"
        android:text="@string/ingresa_los_siguientes_datos"
        android:textColor="#000000"
        android:textSize="16sp"
        android:textStyle="normal"
        app:layout_constraintBottom_toTopOf="@+id/guideline28"
        app:layout_constraintEnd_toStartOf="@+id/guideline25"
        app:layout_constraintStart_toStartOf="@+id/guideline9"
        app:layout_constraintTop_toTopOf="@+id/guideline29" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.06812652" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline23"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.8953771" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline25"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.59367394" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline26"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.09" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline27"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.14" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline28"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.23" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline29"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.19640853" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline30"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.29517397" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline31"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.24915825" />

    <EditText
        android:id="@+id/editTextNombre"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:autofillHints=""
        android:background="@drawable/custom_margen"
        android:fontFamily="sans-serif"
        android:hint="@string/nombre"
        android:inputType="none|text"
        android:textColor="#59000000"
        android:textSize="15sp"
        app:layout_constraintBottom_toTopOf="@+id/guideline30"
        app:layout_constraintEnd_toStartOf="@+id/guideline23"
        app:layout_constraintStart_toStartOf="@+id/guideline9"
        app:layout_constraintTop_toTopOf="@+id/guideline31" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline32"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.31762066" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline33"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.36363637" />

    <EditText
        android:id="@+id/editTextApellidos"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:autofillHints=""
        android:background="@drawable/custom_margen"
        android:fontFamily="sans-serif"
        android:gravity="fill_vertical"
        android:hint="@string/apellidos"
        android:inputType="none|text"
        android:letterSpacing="-0.03"
        android:lineSpacingExtra="6sp"
        android:textColor="#929292"
        android:textSize="15sp"
        app:layout_constraintBottom_toTopOf="@+id/guideline33"
        app:layout_constraintEnd_toStartOf="@+id/guideline23"
        app:layout_constraintStart_toStartOf="@+id/guideline9"
        app:layout_constraintTop_toTopOf="@+id/guideline32" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline35"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.4332211" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline36"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.3872054" />

    <EditText
        android:id="@+id/editTextCedula"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:autofillHints=""
        android:background="@drawable/custom_margen"
        android:fontFamily="sans-serif"
        android:gravity="fill_horizontal"
        android:hint="@string/cedula"
        android:inputType="none|text"
        android:letterSpacing="-0.03"
        android:lineSpacingExtra="6sp"
        android:textColor="#929292"
        android:textSize="15sp"
        android:textStyle="normal"
        app:layout_constraintBottom_toTopOf="@+id/guideline35"
        app:layout_constraintEnd_toStartOf="@+id/guideline23"
        app:layout_constraintStart_toStartOf="@+id/guideline9"
        app:layout_constraintTop_toTopOf="@+id/guideline36" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline37"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.5028058" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline38"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.45679012" />

    <EditText
        android:id="@+id/editTextContrasena"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:autofillHints=""
        android:background="@drawable/custom_margen"
        android:fontFamily="sans-serif"
        android:gravity="fill_vertical"
        android:hint="@string/contrasena"
        android:inputType="textPassword"
        android:letterSpacing="-0.03"
        android:lineSpacingExtra="6sp"
        android:textColor="#929292"
        android:textSize="15sp"
        app:layout_constraintBottom_toTopOf="@+id/guideline37"
        app:layout_constraintEnd_toStartOf="@+id/guideline23"
        app:layout_constraintStart_toStartOf="@+id/guideline9"
        app:layout_constraintTop_toTopOf="@+id/guideline38" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline39"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.57126826" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline40"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.5252525" />

    <EditText
        android:id="@+id/editTextDireccion"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:autofillHints=""
        android:background="@drawable/custom_margen"
        android:fontFamily="sans-serif"
        android:gravity="fill_vertical"
        android:hint="@string/direcci_n"
        android:inputType="none|text"
        android:letterSpacing="-0.03"
        android:lineSpacingExtra="6sp"
        android:textColor="#929292"
        android:textSize="15sp"
        app:layout_constraintBottom_toTopOf="@+id/guideline39"
        app:layout_constraintEnd_toStartOf="@+id/guideline23"
        app:layout_constraintStart_toStartOf="@+id/guideline9"
        app:layout_constraintTop_toTopOf="@+id/guideline40" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline42"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.59483725" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline43"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.640853" />

    <EditText
        android:id="@+id/editTextCorreo"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:autofillHints=""
        android:background="@drawable/custom_margen"
        android:fontFamily="sans-serif"
        android:gravity="fill_vertical"
        android:hint="@string/correo"
        android:inputType="textEmailAddress"
        android:letterSpacing="-0.03"
        android:lineSpacingExtra="6sp"
        android:textColor="#929292"
        android:textSize="15sp"
        app:layout_constraintBottom_toTopOf="@+id/guideline43"
        app:layout_constraintEnd_toStartOf="@+id/guideline23"
        app:layout_constraintStart_toStartOf="@+id/guideline9"
        app:layout_constraintTop_toTopOf="@+id/guideline42" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline44"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.7104377" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline45"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.664422" />

    <EditText
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:autofillHints=""
        android:background="@drawable/custom_margen"
        android:fontFamily="sans-serif"
        android:gravity="fill_vertical"
        android:hint="@string/telefono"
        android:inputType="text"
        android:letterSpacing="-0.03"
        android:lineSpacingExtra="6sp"
        android:textColor="#929292"
        android:textSize="15sp"
        app:layout_constraintBottom_toTopOf="@+id/guideline44"
        app:layout_constraintEnd_toStartOf="@+id/guideline23"
        app:layout_constraintStart_toStartOf="@+id/guideline9"
        app:layout_constraintTop_toTopOf="@+id/guideline45" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline46"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.7452301" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline47"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.79349047" />

    <Button
        android:id="@+id/bottomRegistrarse"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/custom_button_secundary"
        android:gravity="center"
        android:text="@string/registrarse"
        android:textColor="@color/primaryTextColor"
        app:layout_constraintBottom_toTopOf="@+id/guideline47"
        app:layout_constraintEnd_toStartOf="@+id/guideline23"
        app:layout_constraintStart_toStartOf="@+id/guideline9"
        app:layout_constraintTop_toTopOf="@+id/guideline46" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline48"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.88" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline49"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.85" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:fontFamily="sans-serif-medium"
        android:gravity="center|right|center_horizontal"
        android:text="@string/ya_tienes_con_una_cuenta"
        android:textColor="@color/primaryDarkColor"
        android:textSize="12sp"
        android:textStyle="normal"
        app:layout_constraintBottom_toTopOf="@+id/guideline48"
        app:layout_constraintEnd_toStartOf="@+id/guideline25"
        app:layout_constraintHorizontal_bias="0.52"
        app:layout_constraintStart_toStartOf="@+id/guideline9"
        app:layout_constraintTop_toTopOf="@+id/guideline49" />

    <TextView
        android:id="@+id/textIniciar"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:fontFamily="sans-serif-medium"
        android:gravity="center"
        android:text="@string/iniciar_seccion"
        android:textColor="#038AF6"
        android:textSize="12sp"
        android:textStyle="normal"
        app:layout_constraintBottom_toTopOf="@+id/guideline48"
        app:layout_constraintEnd_toStartOf="@+id/guideline23"
        app:layout_constraintStart_toEndOf="@+id/textView"
        app:layout_constraintTop_toTopOf="@+id/guideline49" />

</androidx.constraintlayout.widget.ConstraintLayout>